# zectrix-telegram

./: .gitignore  README.md  fetch_and_push.py  pyproject.toml
.claude/skills/: SKILL.md
.claude/skills/references/: api-reference.md
.github/workflows/: telegram-to-zectrix.yml
