[project]
name = "telegram-to-zectrix"
version = "0.1.0"
description = "Fetch latest messages from public Telegram channels and push to Zectrix e-ink device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
